#PK-1193 Updated icon color

--- a/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
@@ -632,6 +632,6 @@
     }
 
     .member-image i {
-        color: #81ff7c;
+        color: #00a8e8;
         text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
     }
