--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -206,7 +206,7 @@
             </div> *@
             <div class="row my-3">
                 <div class="col-2">
-                    <label>@L["ItemStyle"]<span class="text-danger">*</span></label>
+                    <label>@L["ItemStyle"]<span class="text-danger"></span></label>
                 </div>
                 <div class="col-10">
 
