--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
@@ -201,7 +201,7 @@
         </div> *@
         <div class="row">
             <div class="col-2">
-                <label>@L["ItemStyle"]<span class="text-danger">*</span></label>
+                <label>@L["ItemStyle"]<span class="text-danger"></span></label>
             </div>
             <div class="col-10">
 
