--- a/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
@@ -625,13 +625,18 @@
         height: auto;
     }
 
-    .member-image .b-tooltip {
+    .member-image .badge {
         position: absolute;
         right: 0;
-        bottom: -5px;
+        left: 0;
+        bottom: -8px;
+        background-color: #00a8e8;
+        text-transform: uppercase;
+        font-size: 10px;
+        width: 100%;
     }
 
-    .member-image i {
-        color: #00a8e8;
-        text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
-    }
+.ant-picker,
+.ant-select {
+    width: 100%;
+}
