--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -863,7 +863,24 @@
                 <InputNumber class="form-control" @bind-Value="@EditGroupBuyDto.ProfitShare" />
             </div>
         </div>
-
+         <div class="row">
+          <div class="col-2"></div>
+        <div class="col-2">
+        <label>@L["FaceBookPixelID"]</label>
+        </div>
+        <div class="col-5">
+        <InputNumber class="form-control" @bind-Value="@EditGroupBuyDto.FBID" />
+        </div>
+        </div>
+          <div class="row">
+        <div class="col-2"></div>
+        <div class="col-2">
+        <label>@L["GAID"]</label>
+        </div>
+        <div class="col-5">
+        <TextEdit  @bind-Text="@EditGroupBuyDto.GAID" />
+        </div>
+        </div>
         @*    <div class="row">
         <div class="col-2"></div>
         <div class="col-2">
@@ -900,15 +917,7 @@
         <TextEdit  @bind-Text="@EditGroupBuyDto.LineID" />
         </div>
         </div>
-        <div class="row">
-        <div class="col-2"></div>
-        <div class="col-2">
-        <label>@L["GAID"]</label>
-        </div>
-        <div class="col-5">
-        <TextEdit  @bind-Text="@EditGroupBuyDto.GAID" />
-        </div>
-        </div>
+      
         <div class="row">
         <div class="col-2"></div>
         <div class="col-2">
