--- a/src/Kooco.Pikachu.Blazor/Pages/Dashboard/DashboardStats/DashboardStats.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Dashboard/DashboardStats/DashboardStats.razor
@@ -1,4 +1,4 @@
-﻿@inherits PikachuComponentBase
+﻿@* @inherits PikachuComponentBase
 
 <div class="dashboard-stats">
     @foreach (var stat in Stats)
@@ -19,4 +19,4 @@
             </div>
         </div>
     }
-</div>
+</div> *@
