--- a/src/Kooco.Pikachu.Blazor/Pages/Dashboard/DashboardBestSellers/DashboardBestSellers.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Dashboard/DashboardBestSellers/DashboardBestSellers.razor
@@ -1,10 +1,11 @@
 ﻿@inherits PikachuComponentBase
+@inject NavigationManager NavigationManager
 
 <Card>
     <CardBody>
         <Div Class="d-flex align-items-center justify-content-between">
             <h4 class="m-0">@L["BestSellers"]</h4>
-            <Button Class="btn-link">@L["ViewAll"]</Button>
+            <Button Class="btn-link" Clicked="@(() => NavigationManager.NavigateTo("/Items"))">@L["ViewAll"]</Button>
         </Div>
         <Divider></Divider>
     </CardBody>
