--- a/src/Kooco.Pikachu.Blazor/Pages/Dashboard/DashboardOrdersTable/DashboardOrdersTable.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Dashboard/DashboardOrdersTable/DashboardOrdersTable.razor
@@ -1,10 +1,11 @@
 ﻿@inherits PikachuComponentBase
+@inject NavigationManager NavigationManager
 
 <Card>
     <CardBody>
         <Div Class="d-flex align-items-center justify-content-between">
             <h4 class="m-0">@L["RecentOrders"]</h4>
-            <Button Class="btn-link">@L["ViewAll"]</Button>
+            <Button Class="btn-link" Clicked="@(() => NavigationManager.NavigateTo("/Orders"))">@L["ViewAll"]</Button>
         </Div>
         <Divider></Divider>
     </CardBody>
