--- a/src/Kooco.Pikachu.Blazor/Pages/Components/PikachuButton.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Components/PikachuButton.razor
@@ -1,11 +1,11 @@
 ﻿<button class="pk-btn @Class" @onclick="Clicked" disabled="@(Disabled || Loading)" type="@Type">
     @if (Loading)
     {
-        <div class="spinner-border" style="margin-right: 3px" role="status"></div>
+        <div class="spinner-border" role="status"></div>
     }
     @if(!Loading && !string.IsNullOrWhiteSpace(IconClass))
     {
-        <i class="@IconClass" style="margin-right: 3px;"></i>
+        <i class="@IconClass"></i>
     }
     @ChildContent
 </button>
