--- a/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
@@ -372,6 +372,11 @@
         cursor: not-allowed;
     }
 
+    .pk-btn i,
+    .pk-btn .spinner-border {
+        margin-right: 3px;
+    }
+
 .pk-btn-sm {
     font-size: 13px;
     padding: 0.4rem 0.75rem;
@@ -431,6 +436,10 @@
         color: var(--pk-semi-dark);
     }
 
+.pk-btn-lightgrey {
+    background-color: var(--pk-lightgrey);
+}
+
 .pk-btn-transparent {
     background: transparent;
     color: var(--pk-dark);
@@ -464,6 +473,24 @@
     .pk-btn-outline-danger:disabled {
         color: var(--pk-danger-light);
         background-color: transparent;
+    }
+
+.pk-btn-icon {
+    padding: 6px 10px;
+    border-radius: var(--radius-sm);
+    background-color: #f1f1f1;
+    color: var(--text-muted);
+    font-size: 12px;
+    transition: var(--transition);
+}
+
+    .pk-btn-icon i {
+        margin-right: 0;
+    }
+
+    .pk-btn-icon:hover {
+        background-color: var(--primary-color);
+        color: white;
     }
 
 .nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link {
@@ -639,4 +666,48 @@
 .ant-picker,
 .ant-select {
     width: 100%;
+}
+
+.pk-badge {
+    display: inline-block;
+    padding: 4px 8px;
+    border-radius: 4px;
+    font-size: 12px;
+    font-weight: 500;
+    text-align: center;
+}
+
+.pk-badge-default {
+    background-color: rgba(0, 0, 0, 0.1);
+    color: #000000;
+}
+
+.pk-badge-primary {
+    background-color: rgba(52, 152, 219, 0.1);
+    color: #3498db;
+}
+
+.pk-badge-warning {
+    background-color: rgba(243, 156, 18, 0.1);
+    color: #f39c12;
+}
+
+.pk-badge-success {
+    background-color: rgba(46, 204, 113, 0.1);
+    color: #2ecc71;
+}
+
+.pk-badge-danger {
+    background-color: rgba(231, 76, 60, 0.1);
+    color: #e74c3c;
+}
+
+.pk-badge-info {
+    background-color: rgba(0, 153, 255, 0.1);
+    color: #0099ff;
+}
+
+.pk-badge-purple {
+    background-color: rgba(243, 18, 228, 0.1);
+    color: #f312e4;
 }
