#PK-1196 Dashboard stats

--- a/src/Kooco.Pikachu.Blazor/Pages/Dashboard/Dashboard.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Dashboard/Dashboard.razor
@@ -67,7 +67,7 @@
 </Card>
 
 <Div>
-    @* <DashboardStats Value="DashboardStats"></DashboardStats> *@
+    <DashboardStats Value="DashboardStats"></DashboardStats>
 </Div>
 <Div>
     <DashboardCharts @ref="_dashboardCharts"></DashboardCharts>
