--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -1860,7 +1860,7 @@
             </div>
             <div class="col-10">
                 <div class="col-12">
-            <InputText></InputText>
+            <TextEdit></TextEdit>
             </div>
             </div>
             
