--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -869,7 +869,7 @@
         <label>@L["FaceBookPixelID"]</label>
         </div>
         <div class="col-5">
-        <InputNumber class="form-control" @bind-Value="@EditGroupBuyDto.FBID" />
+                <TextEdit class="form-control" @bind-Text="@EditGroupBuyDto.FBID" />
         </div>
         </div>
           <div class="row">
